--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -77,34 +77,37 @@ OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
                   nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o rs232.o serialmon.o specialfolder.o svd-support.o \
                   swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
-                  findfont.o lodepng.o \
-                  nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
                   cksum.o crc32.o elf.o gdb-rsp.o guidriver.o ident.o minIni.o \
-                  nuklear_mousepointer.o nuklear_style.o nuklear_tooltip.o \
+                  nuklear_guide.o nuklear_mousepointer.o nuklear_style.o nuklear_tooltip.o \
                   picoro.o rs232.o specialfolder.o tcpip.o xmltractor.o \
-                  findfont.o lodepng.o \
-                  nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
 
 OBJLIST_BMPROFILE = bmprofile.o bmcommon.o bmp-scan.o bmp-script.o \
                     bmp-support.o crc32.o decodectf.o demangle.o dwarf.o \
                     elf.o gdb-rsp.o guidriver.o mcu-info.o minIni.o \
                     parsetsdl.o picoro.o rs232.o specialfolder.o swotrace.o \
-                    tcpip.o xmltractor.o nuklear_mousepointer.o \
+                    tcpip.o xmltractor.o nuklear_guide.o nuklear_mousepointer.o \
                     nuklear_splitter.o nuklear_style.o nuklear_tooltip.o \
-                    findfont.o lodepng.o \
-                    nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                    findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+
+OBJLIST_BMSERIAL = bmserial.o guidriver.o minIni.o rs232.o \
+                   specialfolder.o noc_file_dialog.o \
+                   nuklear_guide.o nuklear_mousepointer.o nuklear_splitter.o \
+                   nuklear_style.o nuklear_tooltip.o \
+                   findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o
 
 OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
                   crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
-                  minIni.o nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
-                  nuklear_tooltip.o picoro.o rs232.o specialfolder.o swotrace.o \
-                  tcpip.o xmltractor.o decodectf.o parsetsdl.o \
-                  findfont.o lodepng.o \
-                  nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  minIni.o nuklear_guide.o nuklear_mousepointer.o nuklear_splitter.o \
+                  nuklear_style.o nuklear_tooltip.o picoro.o rs232.o specialfolder.o \
+                  swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
+                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
 
-OBJLIST_BMSCAN = bmscan.o bmp-scan.o tcpip.o
+OBJLIST_BMSCAN = bmscan.o bmp-scan.o bmp-script.o bmp-support.o crc32.o elf.o \
+                 gdb-rsp.o picoro.o rs232.o specialfolder.o tcpip.o xmltractor.o
 
 OBJLIST_CALLTREE = calltree.o
 
@@ -113,11 +116,11 @@ OBJLIST_POSTLINK = elf-postlink.o elf.o
 OBJLIST_TRACEGEN = tracegen.o parsetsdl.o
 
 
-project: bmdebug bmflash bmprofile bmscan bmtrace calltree elf-postlink tracegen
+project: bmdebug bmflash bmprofile bmscan bmserial bmtrace calltree elf-postlink tracegen
 
 depend :
 	makedepend -b -fmakefile.dep $(OBJLIST_BMDEBUG:.o=.c) $(OBJLIST_BMFLASH:.o=.c) \
-                   $(OBJLIST_BMPROFILE:.o=.c) $(OBJLIST_BMSCAN:.o=.c) \
+                   $(OBJLIST_BMPROFILE:.o=.c) $(OBJLIST_BMSCAN:.o=.c) $(OBJLIST_BMSERIAL:.o=.c) \
                    $(OBJLIST_BMTRACE:.o=.c) $(OBJLIST_CALLTREE) \
                    $(OBJLIST_POSTLINK:.o=.c) $(OBJLIST_TRACEGEN:.o=.c)
 
@@ -135,6 +138,8 @@ bmflash.o : bmflash.c
 bmprofile.o : bmprofile.c
 
 bmscan.o : bmscan.c
+
+bmserial.o : bmserial.c
 
 bmtrace.o : bmtrace.c
 
@@ -180,6 +185,8 @@ noc_file_dialog.o : CFLAGS += -DNOC_FILE_DIALOG_GTK
 noc_file_dialog.o : INCLUDE += `pkg-config --cflags gtk+-3.0`
 noc_file_dialog.o : noc_file_dialog.c
 
+nuklear_guide.o : nuklear_guide.c
+
 nuklear_mousepointer.o : nuklear_mousepointer.c
 
 nuklear_splitter.o : nuklear_splitter.c
@@ -219,9 +226,12 @@ bmdebug : $(OBJLIST_BMDEBUG)
 	$(LNK) $(LFLAGS) -o$@ $^ -lfontconfig -l$(GLFW_LIBNAME) -lGL -lm -lbsd -ldl -lpthread -lX11 -lxcb -lXau -lXdmcp `pkg-config --libs gtk+-3.0` -lusb-1.0
 
 bmflash : $(OBJLIST_BMFLASH)
-	$(LNK) $(LFLAGS) -o$@ $^ -lfontconfig -l$(GLFW_LIBNAME) -lGL -lm -lbsd -ldl -lpthread -lX11 -lxcb -lXau -lXdmcp `pkg-config --libs gtk+-3.0`
+	$(LNK) $(LFLAGS) -o$@ $^ -lfontconfig -l$(GLFW_LIBNAME) -lGL -lm -lbsd -ldl -lpthread -lX11 -lxcb -lXau -lXdmcp `pkg-config --libs gtk+-3.0` -lusb-1.0
 
 bmprofile : $(OBJLIST_BMPROFILE)
+	$(LNK) $(LFLAGS) -o$@ $^ -lfontconfig -l$(GLFW_LIBNAME) -lGL -lm -lbsd -ldl -lpthread -lX11 -lxcb -lXau -lXdmcp `pkg-config --libs gtk+-3.0` -lusb-1.0
+
+bmserial : $(OBJLIST_BMSERIAL)
 	$(LNK) $(LFLAGS) -o$@ $^ -lfontconfig -l$(GLFW_LIBNAME) -lGL -lm -lbsd -ldl -lpthread -lX11 -lxcb -lXau -lXdmcp `pkg-config --libs gtk+-3.0` -lusb-1.0
 
 bmtrace : $(OBJLIST_BMTRACE)
