--- a/source/bmdebug.rc
+++ b/source/bmdebug.rc
@@ -29,9 +29,9 @@ AppIcon ICON "res/icon_debug.ico"
  *  for details on version information and the VERSIONINFO structure.
  */
 #define VERSION              1
-#define REVISION             1
+#define REVISION             2
 #define BUILD                SVNREV_NUM
-#define VERSIONSTR           "1.1.*\0"
+#define VERSIONSTR           SVNREV_STR
 #define VERSIONNAME          "bmdebug.exe\0"
 #define VERSIONDESCRIPTION   "GDB front-end\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
