--- a/source/Makefile.msvc
+++ b/source/Makefile.msvc
@@ -34,6 +34,7 @@ R_DEBUG =
 CL        = cl
 CC        = cl /c
 CFLAGS    = /nologo /MT /W1 /EHsc /D _WIN32 $(C_DEBUG) /D NOC_FILE_DIALOG_WIN32 /D _CRT_SECURE_NO_WARNINGS
+INCLUDE   =
 
 ####### Resource compiler
 RC        = rc
@@ -50,14 +51,16 @@ LFLAGS_C  = $(L_DEBUG) /NOLOGO /SUBSYSTEM:console
 # -------------------------------------------------------------
 
 .c.exe :
-	$(CL) $(CFLAGS) /D STANDALONE /Fe$@ $<
+	$(CL) $(CFLAGS) $(INCLUDE) /D STANDALONE /Fe$@ $<
 
 .c.obj :
-	$(CC) $(CFLAGS) /Fo$@ $<
+	$(CC) $(CFLAGS) $(INCLUDE) /Fo$@ $<
 
 .rc.res :
 	$(RC) -r $(RCFLAGS) /Fo$@ $<
 
+.md.h :
+	$(QGP) -c $< $@
 
 # -------------------------------------------------------------
 #               Project
@@ -73,8 +76,8 @@ OBJLIST_BMDEBUG = bmdebug.obj armdisasm.obj bmcommon.obj bmp-scan.obj bmp-script
 
 OBJLIST_BMFLASH = bmflash.obj bmcommon.obj bmp-scan.obj bmp-script.obj bmp-support.obj \
                   cksum.obj crc32.obj elf.obj gdb-rsp.obj guidriver.obj ident.obj minIni.obj \
-                  nuklear_mousepointer.obj nuklear_style.obj nuklear_tooltip.obj \
-                  picoro.obj rs232.obj specialfolder.obj tcpip.obj xmltractor.obj \
+                  nuklear_guide.obj nuklear_mousepointer.obj nuklear_style.obj nuklear_tooltip.obj \
+                  picoro.obj rs232.obj specialfolder.obj tcl.obj tcpip.obj xmltractor.obj \
                   strlcpy.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
@@ -82,7 +85,7 @@ OBJLIST_BMPROFILE = bmprofile.obj bmcommon.obj bmp-scan.obj bmp-script.obj \
                     bmp-support.obj crc32.obj decodectf.obj demangle.obj dwarf.obj \
                     elf.obj gdb-rsp.obj guidriver.obj mcu-info.obj minIni.obj \
                     parsetsdl.obj picoro.obj rs232.obj specialfolder.obj swotrace.obj \
-                    tcpip.obj xmltractor.obj nuklear_mousepointer.obj \
+                    tcpip.obj xmltractor.obj nuklear_guide.obj nuklear_mousepointer.obj \
                     nuklear_splitter.obj nuklear_style.obj nuklear_tooltip.obj \
                     strlcpy.obj usb-support.obj \
                     nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
@@ -90,20 +93,19 @@ OBJLIST_BMPROFILE = bmprofile.obj bmcommon.obj bmp-scan.obj bmp-script.obj \
 OBJLIST_BMSERIAL = bmserial.obj guidriver.obj minIni.obj rs232.obj \
                    specialfolder.obj noc_file_dialog.obj \
                    nuklear_guide.obj nuklear_mousepointer.obj nuklear_splitter.obj \
-                   nuklear_style.obj nuklear_tooltip.obj \
+                   nuklear_style.obj nuklear_tooltip.obj tcl.obj \
                    findfont.obj lodepng.obj nuklear.obj nuklear_gdip.obj
 
 OBJLIST_BMTRACE = bmtrace.obj bmcommon.obj bmp-scan.obj bmp-script.obj bmp-support.obj \
                   crc32.obj demangle.obj dwarf.obj elf.obj gdb-rsp.obj guidriver.obj mcu-info.obj \
-                  minIni.obj nuklear_mousepointer.obj nuklear_splitter.obj nuklear_style.obj \
-                  nuklear_tooltip.obj picoro.obj rs232.obj specialfolder.obj swotrace.obj \
-                  tcpip.obj xmltractor.obj decodectf.obj parsetsdl.obj \
+                  minIni.obj nuklear_guide.obj nuklear_mousepointer.obj nuklear_splitter.obj \
+                  nuklear_style.obj nuklear_tooltip.obj picoro.obj rs232.obj specialfolder.obj \
+                  swotrace.obj tcpip.obj xmltractor.obj decodectf.obj parsetsdl.obj \
                   strlcpy.obj usb-support.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
-OBJLIST_BMSCAN = bmscan.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj \
-                 elf.obj gdb-rsp.obj picoro.obj rs232.obj specialfolder.obj tcpip.obj \
-                 xmltractor.obj
+OBJLIST_BMSCAN = bmscan.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj elf.obj \
+                 gdb-rsp.obj picoro.obj rs232.obj specialfolder.obj tcpip.obj xmltractor.obj \
 
 OBJLIST_CALLTREE = calltree.obj
 
@@ -116,7 +118,7 @@ project : bmdebug.exe bmflash.exe bmprofile.exe bmscan.exe bmserial.exe bmtrace.
           calltree.exe elf-postlink.exe tracegen.exe
 
 depend :
-	makedepend -b -e -o.obj -fmakefile.dep $(OBJLIST_BMDEBUG:.obj=.c) $(OBJLIST_BMFLASH:.obj=.c) \
+	makedepend -b -e -o.obj -sort -fmakefile.dep $(OBJLIST_BMDEBUG:.obj=.c) $(OBJLIST_BMFLASH:.obj=.c) \
                    $(OBJLIST_BMPROFILE:.obj=.c) $(OBJLIST_BMSCAN:.obj=.c) \
                    $(OBJLIST_BMSERIAL:.obj=.c) $(OBJLIST_BMTRACE:.obj=.c) \
                    $(OBJLIST_CALLTREE:.obj=.c) $(OBJLIST_POSTLINK:.obj=.c) \
@@ -206,6 +208,8 @@ svd-support.obj : svd-support.c
 swotrace.obj : swotrace.c
 
 tcpip.obj : tcpip.c
+
+tcl.obj : tcl.c
 
 tracegen.obj : tracegen.c
 
