--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -72,7 +72,7 @@ endif
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
-                  demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o \
+                  c11threads_win32.o demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o \
                   minIni.o nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o rs232.o serialmon.o specialfolder.o svd-support.o \
                   swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
@@ -80,16 +80,16 @@ OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  cksum.o crc32.o elf.o gdb-rsp.o guidriver.o ident.o minIni.o \
+                  c11threads_win32.o cksum.o crc32.o elf.o gdb-rsp.o guidriver.o ident.o minIni.o \
                   nuklear_guide.o nuklear_mousepointer.o nuklear_style.o nuklear_tooltip.o \
-                  picoro.o rs232.o specialfolder.o tcl.o tcpip.o xmltractor.o \
+                  rs232.o specialfolder.o tcl.o tcpip.o xmltractor.o \
                   strlcpy.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMPROFILE = bmprofile.o bmcommon.o bmp-scan.o bmp-script.o \
-                    bmp-support.o crc32.o decodectf.o demangle.o dwarf.o \
+                    bmp-support.o c11threads_win32.o crc32.o decodectf.o demangle.o dwarf.o \
                     elf.o gdb-rsp.o guidriver.o mcu-info.o minIni.o \
-                    parsetsdl.o picoro.o rs232.o specialfolder.o swotrace.o \
+                    parsetsdl.o rs232.o specialfolder.o swotrace.o \
                     tcpip.o xmltractor.o nuklear_guide.o nuklear_mousepointer.o \
                     nuklear_splitter.o nuklear_style.o nuklear_tooltip.o \
                     strlcpy.o usb-support.o \
@@ -102,15 +102,15 @@ OBJLIST_BMSERIAL = bmserial.o guidriver.o minIni.o rs232.o \
                    findfont.o nuklear.o nuklear_gdip.o
 
 OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
+                  c11threads_win32.o crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
                   minIni.o nuklear_guide.o nuklear_mousepointer.o nuklear_splitter.o \
-                  nuklear_style.o nuklear_tooltip.o picoro.o rs232.o specialfolder.o \
+                  nuklear_style.o nuklear_tooltip.o rs232.o specialfolder.o \
                   swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
                   strlcpy.o usb-support.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMSCAN = bmscan.o bmp-scan.o bmp-script.o bmp-support.o crc32.o elf.o \
-                 gdb-rsp.o picoro.o rs232.o specialfolder.o tcpip.o xmltractor.o
+                 gdb-rsp.o c11threads_win32.o rs232.o specialfolder.o tcpip.o xmltractor.o
 
 OBJLIST_CALLTREE = calltree.o
 
@@ -154,6 +154,8 @@ bmp-script.o : bmp-script.c
 
 bmp-support.o : bmp-support.c
 
+c11threads_win32.o : c11threads_win32.c
+
 calltree.o : calltree.c
 
 cksum.o : cksum.c
@@ -196,8 +198,6 @@ nuklear_style.o : nuklear_style.c
 nuklear_tooltip.o : nuklear_tooltip.c
 
 parsetsdl.o : parsetsdl.c
-
-picoro.o : picoro.c
 
 rs232.o : rs232.c
 
