--- a/source/bmtrace.rc
+++ b/source/bmtrace.rc
@@ -3,7 +3,7 @@
  * Black Magic Probe. The name stands for "Black Magic Serial Wire Viewer".
  * This utility is built with Nuklear for a cross-platform GUI.
  *
- * Copyright 2019-2022 CompuPhase
+ * Copyright 2019-2023 CompuPhase
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ AppIcon ICON "res/icon_trace.ico"
 #define BUILD                SVNREV_NUM
 #define VERSIONSTR           SVNREV_STR
 #define VERSIONNAME          "bmtrace.exe\0"
-#define VERSIONDESCRIPTION   "Serial Wire Trace Viewer\0"
+#define VERSIONDESCRIPTION   "BMTrace: Serial Wire Trace Viewer\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
 #define VERSIONPRODUCTNAME   "bmtrace\0"
 #define VERSIONCOPYRIGHT     "Copyright \251 CompuPhase 2019-2022\0"
