--- a/source/bmflash.rc
+++ b/source/bmflash.rc
@@ -3,7 +3,7 @@
  * the Black Magic Probe on a system. This utility is built with Nuklear for a
  * cross-platform GUI.
  *
- * Copyright 2019-202 CompuPhase
+ * Copyright 2019-2023 CompuPhase
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ AppIcon ICON "res/icon_download.ico"
 #define BUILD                SVNREV_NUM
 #define VERSIONSTR           SVNREV_STR
 #define VERSIONNAME          "bmflash.exe\0"
-#define VERSIONDESCRIPTION   "Flash programming tool\0"
+#define VERSIONDESCRIPTION   "BMFlash: Flash programming tool\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
 #define VERSIONPRODUCTNAME   "bmflash\0"
 #define VERSIONCOPYRIGHT     "Copyright \251 CompuPhase 2019-2022\0"
