--- a/source/bmprofile.rc
+++ b/source/bmprofile.rc
@@ -3,7 +3,7 @@
  * DWT/ITM modules of the Cortex debug architecture. This utility is built with
  * Nuklear for a cross-platform GUI.
  *
- * Copyright 2022 CompuPhase
+ * Copyright 2022-2023 CompuPhase
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ AppIcon ICON "res/icon_profile.ico"
 #define BUILD                SVNREV_NUM
 #define VERSIONSTR           SVNREV_STR
 #define VERSIONNAME          "bmprofile.exe\0"
-#define VERSIONDESCRIPTION   "Statistical Profiler\0"
+#define VERSIONDESCRIPTION   "BMProfile: Statistical Profiler\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
 #define VERSIONPRODUCTNAME   "bmprofile\0"
 #define VERSIONCOPYRIGHT     "Copyright \251 CompuPhase 2022\0"
