--- a/source/bmserial.rc
+++ b/source/bmserial.rc
@@ -4,7 +4,7 @@
  * was lacking).
  * This utility is built with Nuklear for a cross-platform GUI.
  *
- * Copyright 2022 CompuPhase
+ * Copyright 2022-2023 CompuPhase
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -35,7 +35,7 @@ AppIcon ICON "res/icon_serial.ico"
 #define BUILD                SVNREV_NUM
 #define VERSIONSTR           SVNREV_STR
 #define VERSIONNAME          "bmserial.exe\0"
-#define VERSIONDESCRIPTION   "Serial Monitor/Terminal\0"
+#define VERSIONDESCRIPTION   "BMSerial: Serial Monitor/Terminal\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
 #define VERSIONPRODUCTNAME   "bmserial\0"
 #define VERSIONCOPYRIGHT     "Copyright \251 CompuPhase 2022\0"
