--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -74,8 +74,8 @@ endif
 OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
                   c11threads_win32.o demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o \
                   minIni.o nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
-                  nuklear_tooltip.o rs232.o serialmon.o specialfolder.o svd-support.o \
-                  swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
+                  nuklear_tooltip.o pathsearch.o rs232.o serialmon.o specialfolder.o \
+                  svd-support.o swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
                   strlcpy.o usb-support.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
@@ -198,6 +198,8 @@ nuklear_style.o : nuklear_style.c
 nuklear_tooltip.o : nuklear_tooltip.c
 
 parsetsdl.o : parsetsdl.c
+
+pathsearch.o : pathsearch.c
 
 rs232.o : rs232.c
 
